client/src/elements/schema-editor/schema-editor.css
schema-editor {
  display: block;
}

schema-editor fieldset {
  border: none;
  padding: 0;
  margin: 0;
}

schema-editor fieldset fieldset {
  padding: 0 0 0 20px;
  margin: calc(var(--q-space-base) * 2) 0 calc(var(--q-space-base) / 2) 0;
}

schema-editor fieldset fieldset.compact {
  padding: 0 0 0 10px;
  margin-top: calc(var(--q-space-base) / 2);
}

schema-editor-wrapper legend {
  font-size: var(--q-h2-size);
  font-weight: var(--q-h2-weight);
}

schema-editor-wrapper schema-editor-wrapper legend {
  font-size: var(--q-h3-size);
  font-weight: var(--q-h3-weight);
}

schema-editor-wrapper schema-editor-wrapper schema-editor-wrapper legend {
  font-size: var(--q-h4-size);
  font-weight: var(--q-h4-weight);
}

schema-editor-wrapper schema-editor-wrapper schema-editor-wrapper schema-editor-wrapper legend {
  font-size: var(--q-h5-size);
  font-weight: var(--q-h5-weight);
}

schema-editor-wrapper schema-editor-wrapper schema-editor-wrapper schema-editor-wrapper schema-editor-wrapper legend {
  font-size: var(--q-h5-size);
  font-weight: var(--q-h5-weight);
}

.schema-editor-input {
  display: block;
  margin-bottom: calc(var(--q-space-base) / 2);
}

